# Stable-Gift

./: .gitignore  README-zh.md  README.md
backend/: Cargo.toml  start.sh  stop.sh
backend/src/: config.rs  db.rs  main.rs
backend/src/controllers/: envelopes.rs  mod.rs  verification.rs
backend/src/models/: claims.rs  discord_users.rs  envelopes.rs  mod.rs
backend/src/services/: mod.rs  sui_indexer.rs
contract/: Move.toml
contract/sources/: sui_red_envelope.move
docs/: db_schema.md  discord_verification_logic.md  smart_contract_guide.md  stitch_ui_prompts.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/hooks/: useContract.ts
frontend/src/pages/: Claim.tsx  Claim_new.tsx  Create.tsx  Dashboard.tsx  Explore.tsx  Home.tsx  MintTest.tsx  Sync.tsx
frontend/src/utils/: cn.ts  fmt.ts
